--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ eframe = { version = "0.22.0", default-features = false, features = [
     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
     "persistence",   # Enable restoring app state when restarting the app.
 ] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.105"
